--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,7 @@
 spring.application.name=demo
 
+spring.jpa.hibernate.ddl-auto=update
+
 spring.datasource.url=jdbc:postgresql://localhost:5432/school_scheduler_2
 spring.datasource.username=postgres
 spring.datasource.password=postgres
